# Metaheuristic

./: README.md  hpt.py  jaya.py  perf_eval.py  pyproject.toml  ssss.ipynb
result/: res.csv
