[project]
name = "path-finding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap>=1.4.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "vrplib>=2.1.0",
]
